# murasaki

./: .coveragerc  .gitignore  README.md  build.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  serve.sh
common/: utils.py
gallery/: admin.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_alter_phototranslation_description_and_more.py
gallery/templates/gallery/: photo_detail.html  photos.html  video_detail.html  videos.html
gallery/tests/: test_admin.py  test_models.py  test_views.py
locale/ja/LC_MESSAGES/: django.mo  django.po
murasaki/: asgi.py  manage.py  requirements.txt  serve.sh  urls.py
murasaki/murasaki/: settings.py  wsgi.py
murasaki/murasaki/settings/: base.py
murasaki/pages/: admin.py  models.py  urls.py  views.py
murasaki/settings/: base.py  prod.py  test.py
murasakisite/: Dockerfile  base_site_dump.json  data.json  dump.sh  manage.py  requirements.txt
murasakisite/band/: models.py
murasakisite/home/: models.py
murasakisite/murasakisite/: urls.py  wsgi.py
murasakisite/music/: models.py
murasakisite/news/: models.py
murasakisite/shop/: models.py
murasakisite/static/: staticfiles.json
murasakisite/tour/: models.py
pages/: admin.py  models.py  views.py
pages/migrations/: 0001_initial.py  0003_alter_pagetranslation_intro.py  0004_musicitem_newsitem_tourdate_and_more.py  0009_alter_musicreleasetranslation_unique_together_and_more.py
pages/tests/: test_admin.py  test_models.py  test_views.py
static/css/: murasaki.css
templates/: base.html  nav_bar.html
(+38 files in other folders)
